Jumping border fixed

--- a/ample/languages/xul/themes/default/treelist.css
+++ b/ample/languages/xul/themes/default/treelist.css
@@ -3,15 +3,15 @@ xul|tree {
 	cursor: default !important;
 	border: 1px solid silver;
 	background-color: white;
-	margin: 1px;
+	margin: 0px;
 	height: 200px; /* default height */
 }
 
 xul|listbox:focus,
 xul|tree:focus {
 	border-color: #7F9DB9;
-	border-width: 2px;
-	margin: 0;
+	border-width: 1px;
+/*	margin: 0;*/
 }
 
 xul|listbox:disabled,
